# LyoPRONTO

./: .coveragerc.non-pyomo  .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLEANUP_SUMMARY.md  COMPLETE_REPORT.md  CONTRIBUTING.md  Makefile  PR_BODY.md  README.md  REPOSITORY_ORGANIZATION.md  environment.yml  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_local_ci.sh  versions.json
.github/: copilot-examples.md  copilot-instructions.md
.github/workflows/: docs.yml  full-validation.yml  pr-tests.yml  pyomo-tests.yml  rundocs.yml  slow-tests.yml  tests.yml
benchmarks/: GRID_CLI_GUIDE.md  README.md  __init__.py  adapters.py  analysis.py  analysis_visualization_demo.ipynb  cleanup.py  grid_analysis.ipynb  grid_cli.py  paper_problem1_reference.py  run_batch.py  run_grid_3x3.py  run_single_case.py  scenarios.py  schema.py  validate.py
benchmarks/archive/: README.md
benchmarks/docs/: CLEANUP_UTILITY.md  CLI_GUIDE.md  NOTEBOOKS_GUIDE.md  README.md
benchmarks/notebooks/: grid_analysis.ipynb  grid_analysis_SIMPLE.ipynb
benchmarks/results/: .gitignore  README.md  baseline_Pch_3x3.jsonl  baseline_Pch_3x3_summary.jsonl  baseline_Tsh_3x3.jsonl  baseline_Tsh_3x3_summary.jsonl  grid.jsonl  grid_ratio.csv  series_baseline.jsonl
benchmarks/scripts/: aggregate.py  diagnostics.py  extract_scipy.py  generate_reports.py  grid_cli.py  merge_scipy_results.py  repair_failed_runs.py  run_grid.py  run_single.py  run_single_case.py  summarize_grid.py  validate.py
benchmarks/src/: __init__.py  adapters.py  analyze_benchmark.py  data_loader.py  paths.py  schema.py  visualization.py
benchmarks/tests/: test_analysis_infrastructure.py
dev/: 404.html  index.html  objects.inv
dev/ARCHITECTURE/: index.html
dev/CALC_UNKNOWNRP_TESTS_COMPLETE/: index.html
dev/CI_PERFORMANCE_OPTIMIZATION/: index.html
dev/CI_QUICK_REFERENCE/: index.html
dev/CI_SETUP/: index.html
dev/CI_SETUP_COMPLETE/: index.html
dev/CI_WORKFLOW_GUIDE/: index.html
dev/CI_WORKFLOW_RECOMMENDATION/: index.html
dev/CLEANUP_COMPLETE/: index.html
dev/COEXISTENCE_PHILOSOPHY/: index.html
dev/DEVELOPMENT_LOG/: index.html
dev/EXAMPLE_INTEGRATION_COMPLETE/: index.html
dev/GETTING_STARTED/: index.html
dev/JULIA_PARITY_MATRIX/: index.html
dev/LOW_COVERAGE_ANALYSIS/: index.html
dev/OPTIMIZER_TESTS_COMPLETE/: index.html
dev/PARALLEL_TESTING/: index.html
dev/PARALLEL_TESTING_COMPLETE/: index.html
dev/PHYSICS_REFERENCE/: index.html
dev/PYOMO_ROADMAP/: index.html
dev/PYOMO_STATUS/: index.html
dev/REPOSITORY_CLEANUP/: index.html
dev/SLOW_TEST_STRATEGY/: index.html
dev/TESTING_INFRASTRUCTURE_ASSESSMENT/: index.html
dev/TESTING_STRATEGY/: index.html
dev/TEST_DIRECTORY_REVIEW/: index.html
dev/TEST_RENAME_COMPLETE/: index.html
dev/TYPED_API_GUIDE/: index.html
dev/archive/: index.html
dev/dev/: index.html
dev/explanation/: index.html
dev/how-to-guides/: index.html
dev/reference/: index.html
dev/tutorials/: index.html
docs/: ARCHITECTURE.md  BENCHMARK_REFACTOR_COMPLETE.md  CI_PERFORMANCE_OPTIMIZATION.md  CI_QUICK_REFERENCE.md  CI_SETUP.md  CI_WORKFLOW_GUIDE.md  COEXISTENCE_PHILOSOPHY.md  FUTURE_WORK.md  GETTING_STARTED.md  JULIA_PARITY_MATRIX.md  PAPER_OCP_VALIDATION.md  PARALLEL_TESTING_COMPLETE.md  PHYSICS_REFERENCE.md  PR_IMPLEMENTATION_PLAN.md  PYOMO_MODELS_REORGANIZATION_SUMMARY.md  PYOMO_OPTIMIZER_COMPLETE.md  PYOMO_ROADMAP.md  PYOMO_STATUS.md  PYOMO_VALIDATION_COMPLETE.md  README.md  SLOW_TEST_STRATEGY.md  TESTING_INFRASTRUCTURE_ASSESSMENT.md  TEST_REORGANIZATION_COMPLETE.md  TYPED_API_GUIDE.md  dev.md  how-to-guides.md  index.md  reference.md  tutorials.md
docs/archive/: BENCHMARK_WARMSTART_FIX.md  INITIAL_CONDITION_OPTIMIZATION.md  PARALLEL_TESTING_COMPLETE.md  PR_IMPLEMENTATION_PLAN.md  PYOMO_MODELS_REORGANIZATION.md  PYOMO_MODEL_DEBUGGING_REPORT.md  PYOMO_OPTIMIZER_EXTENSION_COMPLETE.md  PYOMO_TESTING_SUMMARY.md  RAMP_CONSTRAINTS_IMPLEMENTATION.md  RAMP_CONSTRAINT_LIMITATIONS.md  RAMP_EXPERIMENTS_SUMMARY.md  RAMP_RATE_CONSTRAINTS.md  README.md  TESTING_INFRASTRUCTURE_ASSESSMENT.md  TEST_REORGANIZATION_PLAN.md  test_ramp_constraints.py
docs/examples/: knownRp_PD_output.ipynb  unknownRp_PD_output.ipynb
docs/technical/: julia-parity.md  physics-reference.md
examples/: README.md  example_design_space.py  example_optimizer.py  example_pyomo_optimization.py  example_pyomo_optimizer.py  example_ramp_constraints.py  example_web_interface.py  typed_api_examples.py
examples/legacy/: README.md  ex_knownRp_PD.py
examples/outputs/: README.md
lyopronto/: __init__.py  calc_knownRp.py  calc_unknownRp.py  constant.py  cycle_time.py  design_space.py  eccurt.py  fitting.py  freezing.py  functions.py  high_level.py  opt_Pch.py  opt_Pch_Tsh.py  opt_Tsh.py  physical_properties.py  pikal.py  plot_styling.py  rf.py  typed.py  vials.py
lyopronto/pyomo_models/: README.md  __init__.py  advanced.py  model.py  multi_period.py  optimization.py  optimizers.py  paper_ocp.py  policy_ocp.py  single_step.py  trajectory.py  utils.py
pr-1/: 404.html  index.html
pr-1/ARCHITECTURE/: index.html
pr-1/CI_SETUP/: index.html
pr-2/: 404.html  index.html  objects.inv
tests/: README.md  conftest.py  pyomo_solver.py  scientific_reference_scenarios.py  test_benchmarks.py  test_benchmarks_validate.py  test_calc_knownRp.py  test_calc_unknownRp.py  test_calc_unknownRp_coverage.py  test_calculators.py  test_coverage_gaps.py  test_cycle_time.py  test_design_space.py  test_direct_rp_estimation.py  test_eccurt.py  test_example_scripts.py  test_fitting.py  test_freezing.py  test_functions.py  test_generated_artifact_policy.py  test_helpers.py  test_main.py  test_opt_Pch.py  test_opt_Pch_Tsh.py  test_opt_Pch_Tsh_coverage.py  test_opt_Pch_coverage.py  test_opt_Tsh.py  test_optimizer.py  test_packaging_config.py  test_physical_properties.py  test_pikal.py  test_primary_drying_fit.py  test_public_api.py  test_pyomo_solver.py  test_regression.py  test_rf.py  test_scientific_references.py  test_typed_api.py  test_typed_examples.py  test_vials.py  (+2 more)
(+164 files in other folders)
