[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyopronto"
version = "1.0.0"
description = "LyoPRONTO: An open-source lyophilization process optimization tool"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Gayathri Shivkumar"},
    {name = "Petr S. Kazarin"},
    {name = "Alina A. Alexeenko"},
    {name = "Isaac S. Wheeler"},
]
maintainers = [
    {name = "Isaac S. Wheeler"},
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[project.optional-dependencies]
optimization = [
    "pyomo>=6.7.0",
    "idaes-pse>=2.9.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "hypothesis>=6.82.0",
    "ruff>=0.12.0",
    "mypy>=1.4.0",
    "pandas>=2.0",
    "papermill>=2.6.0",
    "ipykernel>=6.15.0",
    "ruamel.yaml>=0.18.0",
]
docs = [
    "mkdocstrings-python>=2",
    "mkdocs-material>=9.1.0",
    "mike>=2.1",
    "mkdocs-ipynb>=0.1.1",
]
all = [
    "lyopronto[optimization,dev,docs]",
]

[project.urls]
Homepage = "http://lyopronto.geddes.rcac.purdue.edu"
Repository = "https://github.com/LyoHUB/LyoPRONTO"
Documentation = "https://lyohub.github.io/LyoPRONTO/"
"Bug Tracker" = "https://github.com/LyoHUB/LyoPRONTO/issues"

[tool.setuptools.packages.find]
include = ["lyopronto*"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--maxfail=5",
    "--cov=lyopronto",
    "--cov-report=term-missing",
]
markers = [
    "slow: Tests that take a long time to run",
    "fast: Quick tests that run in under 1 second",
    "notebook: Tests that execute Jupyter notebooks for documentation",
    "pyomo: Tests requiring Pyomo and IPOPT solver (deselect with '-m not pyomo')",
    "serial: Tests that must run serially (not in parallel)",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
# Exclude pyomo_models from type checking - Pyomo uses dynamic attribute
# assignment (model.Var = pyo.Var(...)) which generates many false-positive
# mypy errors. The code is tested via pytest instead.
exclude = [
    "lyopronto/pyomo_models/",
]
