[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyopronto"
version = "1.1.0"
description = "LyoPRONTO: An open-source lyophilization process optimization tool"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Gayathri Shivkumar"},
    {name = "Petr S. Kazarin"},
    {name = "Alina A. Alexeenko"},
    {name = "Isaac S. Wheeler"},
]
maintainers = [
    {name = "Isaac S. Wheeler"},
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "ruamel.yaml>=0.18.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[project.optional-dependencies]
optimization = [
    "pyomo>=6.7.0",
    "idaes-pse>=2.5,<2.6; python_version < '3.10'",
    "idaes-pse>=2.9.0; python_version >= '3.10'",
]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "hypothesis>=6.82.0",
    "ruff>=0.12.0",
    "mypy>=1.4.0",
    "pandas>=2.0",
    "papermill>=2.6.0",
    "ipykernel>=6.15.0",
]
docs = [
    "mkdocstrings-python>=2",
    "mkdocs-material>=9.1.0",
    "mike>=2.1",
    "mkdocs-ipynb>=0.1.1",
]
all = [
    "lyopronto[optimization,dev,docs]",
]

[project.urls]
Homepage = "http://lyopronto.geddes.rcac.purdue.edu"
Repository = "https://github.com/LyoHUB/LyoPRONTO"
Documentation = "https://lyohub.github.io/LyoPRONTO/"
"Bug Tracker" = "https://github.com/LyoHUB/LyoPRONTO/issues"

[tool.setuptools.packages.find]
include = ["lyopronto*", "benchmarks*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
# Exclude pyomo_models from type checking - Pyomo uses dynamic attribute
# assignment (model.Var = pyo.Var(...)) which generates many false-positive
# mypy errors. The code is tested via pytest instead.
exclude = [
    "lyopronto/pyomo_models/",
]

[tool.ruff]
# Target Python 3.8+ (matches project.requires-python)
target-version = "py38"
line-length = 88  # Black-compatible
src = ["lyopronto", "tests", "benchmarks"]

[tool.ruff.lint]
# Enable recommended rules + some extras
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "SIM108", # Use ternary operator (sometimes less readable)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Tests can use assert and have longer lines
"tests/**/*.py" = ["S101", "E501"]
# Pyomo test files have conditional imports at module level (intentional pattern)
"tests/test_pyomo_models/*.py" = ["E402", "E722", "F401"]
# Pyomo models use closures in loops for rule functions (Pyomo pattern)
"lyopronto/pyomo_models/*.py" = ["B023", "B007", "E722", "SIM102", "F811"]
# Legacy scipy optimizers use closures in loops (legacy pattern)
"lyopronto/opt_*.py" = ["B023"]
# Package __init__ re-exports modules for public API  
"lyopronto/__init__.py" = ["F401"]
# Benchmarks may have more complex imports
"benchmarks/**/*.py" = ["E501"]
# Legacy examples may have style issues
"examples/legacy/**/*.py" = ["ALL"]
# Notebooks have different import patterns
"**/*.ipynb" = ["E402", "B007"]
# Test design space has complex warning handling
"tests/test_design_space.py" = ["SIM117"]

[tool.ruff.format]
# Use double quotes (Black-compatible)
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Unix line endings
line-ending = "lf"
